Version 10.4.213 - 26 September 2007, by Thierry Vignaud

- drakbug
  o don't report a non existant crash when run w/o --error
  o when unable to access X11, just print the backtrace on the console
- draksec:
  o add a right delegation tab
  o display arrows for tabs

Version 10.4.210 - 24 September 2007, by Thierry Vignaud

- diskdrake
  o fix "Add to LVM"
- drakclock:
  o fix race on ugtk2->exit that causes a crash (#33894)
- drakfont:
  o handle fontpath.d
  o size font directory list dialog

Version 10.4.209 - 22 September 2007, by Olivier "blino" Blin

- make formatXiB() handle negative numbers (for rpmdrake)
- service_harddrake:
  o auto-configure CD-Rom drives in fstab again (even if it prevents
    KDE media manager from unmounting them), to be consistent with
    install which actually configures CD-Rom drives in fstab

Version 10.4.208 - 21 September 2007, by Olivier "blino" Blin

- service_harddrake:
  o do not auto-configure CD-Rom drives in fstab, it fordbids
    umounting with hal (install does not configure them in fstab either)
  o automatically configure harddisks
- finish-install:
  o write autologin settings after user creation only
    (so that home is set and exists, should partly fix GNOME autologin)
  o config first user to autologin if USER_AUTOLOGIN_FIRST is "yes"
  o read gdm autologin settings
- drakupdate_fstab: allow to configure harddisks

Version 10.4.207 - 21 September 2007, by Thierry Vignaud

- drakboot:
  o create .dmrc with mode 0644 for gdm (#33774)
- harddrake:
  o fix listing DVD/CD as them and as unknown (#33366)
  o stop offering to run drakxtv
- localedrake:
  o default input method is now scim-bridge (#32138)

Version 10.4.203 - 19 September 2007, by Thierry Vignaud

- diskdrake:
  o "Clear All" defaults to LVM on full disk if drive is >4TB
  o do not allow partitions bigger than 2TB-1 on DOS MBR, nor partitions
    starting above 2TB-1
- bootloader-config:
  o handle /boot/xxx files on linux raid1