@@ -1,3 +1,4 @@
+- display nicer HTML release notes rather than raw text version
 - fix using iso CD2 on disk (#33022):
   o remove " from medium name when reading media.cfg
   o handle "Volume id" ending with -CD[123] instead of -Disc[123]
