@@ -1,3 +1,6 @@
+- finish-install:
+  o display nicer HTML release notes rather than raw text version
+
 Version 10.4.213 - 26 September 2007, by Thierry Vignaud
 
 - drakbug
